# termvid

./: .gitignore  LICENSE  README.md
src/: pyproject.toml
src/cs/TermVid/: ConsoleUtils.cs  TermVid.cs  TermVid.csproj
src/cs/TermVid/Player/: CursesPlayer.cs  FrameStringGenerator.cs
src/py/: pyproject.toml
src/py/termvid/: __init__.py  __main__.py  counter.py
